--- a/myzk-persistence/pom.xml
+++ b/myzk-persistence/pom.xml
@@ -9,7 +9,7 @@
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
-    <artifactId>persistence</artifactId>
+    <artifactId>myzk-persistence</artifactId>
 
     <properties>
         <spring.framework.version>3.2.3.RELEASE</spring.framework.version>
