Opprettet domene-modul og la Dealer-obj der. La til spring-context for kobling mot mysql-db, samt dozer mapping mellom persistert Dealer-obj og web Dealer-obj. Viser obj fra db i skjermbildet dealerlist.zul vha. zk's MVVM pattern

--- a/myzk-web/pom.xml
+++ b/myzk-web/pom.xml
@@ -12,10 +12,6 @@
     <artifactId>myzk-web</artifactId>
     <packaging>war</packaging>
 
-    <properties>
-        <zkversion>6.5.4</zkversion>
-    </properties>
-
     <repositories>
         <repository>
             <id>ZK CE</id>
@@ -24,25 +20,36 @@
     </repositories>
 
     <dependencies>
+        <!-- START ZK Depencencies -->
         <dependency>
             <groupId>org.zkoss.zk</groupId>
             <artifactId>zkplus</artifactId>
-            <version>${zkversion}</version>
         </dependency>
         <dependency>
             <groupId>org.zkoss.zk</groupId>
             <artifactId>zhtml</artifactId>
-            <version>${zkversion}</version>
         </dependency>
         <dependency>
             <groupId>org.zkoss.zk</groupId>
             <artifactId>zkbind</artifactId>
-            <version>${zkversion}</version>
         </dependency>
         <dependency>
             <groupId>org.zkoss.zk</groupId>
             <artifactId>zul</artifactId>
-            <version>${zkversion}</version>
+        </dependency>
+        <!-- END ZK Depencencies -->
+
+        <!-- START Spring Dependencies -->
+        <dependency>
+            <groupId>org.springframework</groupId>
+            <artifactId>spring-web</artifactId>
+        </dependency>
+        <!-- START Spring Dependencies -->
+
+        <dependency>
+            <groupId>myZk</groupId>
+            <artifactId>myzk-service</artifactId>
+            <version>${project.parent.version}</version>
         </dependency>
     </dependencies>
 
