--- a/myzk-persistence/pom.xml
+++ b/myzk-persistence/pom.xml
@@ -92,6 +92,12 @@
             <artifactId>hsqldb</artifactId>
         </dependency>
         <dependency>
+            <groupId>mysql</groupId>
+            <artifactId>mysql-connector-java</artifactId>
+            <type>jar</type>
+            <scope>compile</scope>
+        </dependency>
+        <dependency>
             <groupId>commons-dbcp</groupId>
             <artifactId>commons-dbcp</artifactId>
         </dependency>
