--- a/myzk-web/src/main/webapp/WEB-INF/web.xml
+++ b/myzk-web/src/main/webapp/WEB-INF/web.xml
@@ -46,6 +46,23 @@
         <url-pattern>/zkau/*</url-pattern>
     </servlet-mapping>
 
+    <!-- Spring configuration -->
+    <!-- Initialize spring context -->
+    <context-param>
+        <param-name>contextConfigLocation</param-name>
+        <param-value>
+            /WEB-INF/spring/applicationContext.xml
+        </param-value>
+    </context-param>
+
+    <listener>
+        <listener-class>org.springframework.web.context.ContextLoaderListener</listener-class>
+    </listener>
+    <!-- Enable webapp Scopes-->
+    <listener>
+        <listener-class>org.springframework.web.context.request.RequestContextListener</listener-class>
+    </listener>
+
     <welcome-file-list>
         <welcome-file>index.zul</welcome-file>
         <welcome-file>index.zhtml</welcome-file>
