--- a/pom.xml
+++ b/pom.xml
@@ -11,6 +11,7 @@
         <module>myzk-persistence</module>
         <module>myzk-web</module>
         <module>myzk-service</module>
+        <module>myzk-domain</module>
     </modules>
     <packaging>pom</packaging>
 
@@ -22,10 +23,34 @@
         <junit.version>4.11</junit.version>
         <logback.version>1.0.13</logback.version>
         <slf4j.version>1.7.5</slf4j.version>
+        <zkversion>6.5.4</zkversion>
     </properties>
 
     <dependencyManagement>
         <dependencies>
+            <!-- START ZK Depencencies -->
+            <dependency>
+                <groupId>org.zkoss.zk</groupId>
+                <artifactId>zkplus</artifactId>
+                <version>${zkversion}</version>
+            </dependency>
+            <dependency>
+                <groupId>org.zkoss.zk</groupId>
+                <artifactId>zhtml</artifactId>
+                <version>${zkversion}</version>
+            </dependency>
+            <dependency>
+                <groupId>org.zkoss.zk</groupId>
+                <artifactId>zkbind</artifactId>
+                <version>${zkversion}</version>
+            </dependency>
+            <dependency>
+                <groupId>org.zkoss.zk</groupId>
+                <artifactId>zul</artifactId>
+                <version>${zkversion}</version>
+            </dependency>
+            <!-- END ZK Depencencies -->
+
             <!-- Spring Dependencies -->
             <!--
                 NOTE: As of Spring 3.2 spring-core repackages both asm 4.0 and cglib
@@ -86,6 +111,11 @@
             <dependency>
                 <groupId>org.springframework</groupId>
                 <artifactId>spring-orm</artifactId>
+                <version>${spring.framework.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>org.springframework</groupId>
+                <artifactId>spring-web</artifactId>
                 <version>${spring.framework.version}</version>
             </dependency>
 
@@ -169,6 +199,20 @@
                 <scope>provided</scope>
             </dependency>
             <!-- END Logging dependencies -->
+
+            <dependency>
+                <groupId>mysql</groupId>
+                <artifactId>mysql-connector-java</artifactId>
+                <version>5.1.17</version>
+                <type>jar</type>
+                <scope>compile</scope>
+            </dependency>
+
+            <dependency>
+                <groupId>net.sf.dozer</groupId>
+                <artifactId>dozer</artifactId>
+                <version>5.3.2</version>
+            </dependency>
 
             <!-- START Test dependencies -->
             <dependency>
